--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -6,6 +6,16 @@
     min-height: 0;
 }
 
+#waybar {
+    background: rgba(28, 32, 40, 0.7); 
+    color: #abb2bf; 
+    font-family: "JetBrainsMono Nerd Font", monospace; 
+    font-size: 13px;
+    border-bottom: 2px solid rgba(60, 65, 75, 0.5); 
+    border-radius: 8px; 
+    margin: 5px; 
+}
+
 window#waybar {
     background: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
@@ -77,7 +87,11 @@ tooltip label {
 
 .custom-spotify {
     padding: 0 10px;
-    margin: 0 4px;
+    margin: 0 5px;
     background-color: #1DB954;
     color: black;
+
+    border: 2px solid green;
+    border-radius: 15px;
+
 }
